<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/generic_row_background"
    android:orientation="vertical"
    android:padding="@dimen/def_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/def_half_half_margin"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/def_quad_margin"
            android:text="@string/sensor_detail_temperature_samples_count"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/temperature_samples_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/def_half_half_margin"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/def_quad_margin"
            android:textColor="@color/sensor_detail_temp_container_text_orange"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/def_half_half_margin"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/def_quad_margin"
            android:text="@string/sensor_detail_temperature_sensor_status"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/temperature_sensor_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/def_half_half_margin"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/def_quad_margin"
            android:textColor="@color/sensor_detail_temp_container_text_orange"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/def_half_half_margin"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/def_quad_margin"
            android:text="@string/sensor_detail_temperature_current"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/current_temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/def_half_half_margin"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/def_quad_margin"
            android:text="Retrieving..."
            android:textColor="@color/sensor_detail_temp_container_text_orange"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/def_half_half_margin"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/def_quad_margin"
            android:text="@string/sensor_detail_temperature_recorded"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/recorded_temperatures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/def_half_half_margin"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/def_quad_margin"
            android:text="Retrieving..."
            android:textColor="@color/sensor_detail_temp_container_text_orange"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="24.11\n\n23.77\n\n25.77" />

    </LinearLayout>

</LinearLayout>